--- a/Style.css
+++ b/Style.css
@@ -16,8 +16,8 @@
     width: 100px;
 }
 .logo{
-    background-image: url("amazon_logo.png");
-    background-size: cover;
+    /*background-image: url("amazon_logo.png");
+    background-size: cover;*/
     height: 50px;
     width: 100%;
 }
@@ -240,8 +240,8 @@ ul a{
 }
 
 .logo{
-    background-image: url("amazon_logo.png");
-    background-size: cover;
+   /* background-image: url("amazon_logo.png");
+    background-size: cover;*/
     height: 50px;
     width: 100px;
 }
